# common-stanzas-example

./: CHANGELOG.md  README.md  common-stanzas-example-dhall.cabal-dhall  common-stanzas-example-hpack.cabal-hpack  common-stanzas-example.cabal  common-stanzas-example.dhall  common.yaml  package.yaml
.github/workflows/: ci.yml
app/: Main.hs
src/: CommonStanzasExample.hs
