cabal-version:       2.2
name:                common-stanzas-example
version:             0.0.0.0
synopsis:            Example project to demonstrate the common stanzas feature
description:         Example project to demonstrate the common stanzas feature
homepage:            https://github.com/vrom911/common-stanzas-example
bug-reports:         https://github.com/vrom911/common-stanzas-example/issues
license:             MPL-2.0
license-file:        LICENSE
author:              Veronika Romashkina
maintainer:          Veronika Romashkina <vrom911@gmail.com>
copyright:           2020 Veronika Romashkina
category:            Example
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.8.1

----------------------------------------------------------------------------
-- Source repository set up
----------------------------------------------------------------------------

source-repository head
  type:                git
  location:            https://github.com/vrom911/common-stanzas-example.git

----------------------------------------------------------------------------
-- Common stanza for all stanzas
----------------------------------------------------------------------------

common common-options
  build-depends:       base ^>= 4.13.0.0

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
                       -Wmissing-deriving-strategies

  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                       DeriveGeneric
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       KindSignatures
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeApplications
                       ViewPatterns

----------------------------------------------------------------------------
-- Common stanza for tests
----------------------------------------------------------------------------

common common-tests
  import:              common-options
  hs-source-dirs:      test

  build-depends:       common-stanzas-example
                     , hedgehog ^>= 1.0
                     , hspec ^>= 2.7.1

  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

----------------------------------------------------------------------------
-- Library stanza
----------------------------------------------------------------------------

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     CommonStanzasExample

----------------------------------------------------------------------------
-- Executable stanza
----------------------------------------------------------------------------

executable common-stanzas-example
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs

  build-depends:       common-stanzas-example

  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

----------------------------------------------------------------------------
-- Test suite # 1
----------------------------------------------------------------------------

test-suite test-suite-1
  import:              common-tests
  type:                exitcode-stdio-1.0
  main-is:             Spec1.hs

----------------------------------------------------------------------------
-- Test suite # 2
----------------------------------------------------------------------------

test-suite test-suite-2
  import:              common-tests
  type:                exitcode-stdio-1.0
  main-is:             Spec2.hs
